# bookmark

./: .env.example  .python-gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py
scripts/: setup.sh  uv-quickstart.sh
src/tg_bookmark/: __init__.py  __main__.py
src/tg_bookmark/ai_engine/: __init__.py  base.py  classifier.py  providers.py  summarizer.py
src/tg_bookmark/config/: settings.py
src/tg_bookmark/content_extractor/: __init__.py  file_processor.py  ocr.py  pipeline.py  url_processor.py
src/tg_bookmark/storage/: __init__.py  base.py  factory.py  notion.py  obsidian.py
src/tg_bookmark/telegram_bot/: __init__.py  bot.py
src/tg_bookmark/telegram_bot/handlers/: __init__.py  callback_handler.py  media_handler.py  message_handler.py
src/tg_bookmark/utils/: logging.py  logging_filter.py
